--- a/ui/src/app/shared/variable/form/variable.form.html
+++ b/ui/src/app/shared/variable/form/variable.form.html
@@ -1,27 +1,36 @@
-<form class="ui form" (ngSubmit)="create()">
-    <div class="fields">
-        <div class="five wide field">
-            <label>{{'variable_name' | translate}}</label>
-            <input class="ui input" type="text" name="name" [(ngModel)]="newVariable.name" [disabled]="loading">
-        </div>
-        <div class="three wide field">
-            <label>{{'variable_type' | translate}}</label>
-            <sm-select class="fluid search"
-                name="type"
-                *ngIf="variableTypes"
-                [disabled]="loading"
-                [(model)]="newVariable.type"
-                [options]="{'fullTextSearch': true}">
-                <option *ngFor="let type of variableTypes" [value]="type">{{type}}</option>
-            </sm-select>
-        </div>
-        <div class="five wide field">
-            <label>{{'variable_value' | translate}}</label>
-            <app-variable-value [type]="newVariable.type" [(value)]="newVariable.value" [disabled]="loading" (valueUpdated)="newVariable.value = $event" ></app-variable-value>
-        </div>
-        <div class="three wide center field">
-            <button class="ui green button" [class.loading]="loading" [class.disabled]="loading || !newVariable.name || newVariable.name === '' ||
-                !newVariable.type || newVariable.type === ''"><i class="save icon"></i>{{ 'btn_save' | translate}}</button>
-        </div>
-    </div>
+<form nz-form (ngSubmit)="create()">
+    <nz-row>
+        <nz-col [nzSpan]="8">
+            <nz-form-item>
+                <nz-form-label>Name</nz-form-label>
+                <nz-form-control>
+                    <input nz-input type="text" name="name" [(ngModel)]="newVariable.name" [disabled]="loading">
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="4">
+            <nz-form-item>
+                <nz-form-label>Type</nz-form-label>
+                <nz-form-control>
+                    <nz-select nzShowSearch name="type" [(ngModel)]="newVariable.type" [nzLoading]="loading">
+                        <nz-option *ngFor="let type of variableTypes" [nzValue]="type" [nzLabel]="type"></nz-option>
+                    </nz-select>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="8">
+            <nz-form-item>
+                <nz-form-label>Value</nz-form-label>
+                <nz-form-control>
+                    <app-variable-value [type]="newVariable.type" [(value)]="newVariable.value" [disabled]="loading" (valueUpdated)="newVariable.value = $event" ></app-variable-value>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="4">
+            <button nz-button nzType="primary" [nzLoading]="loading" [disabled]="loading || !newVariable.name || newVariable.name === '' ||
+                !newVariable.type || newVariable.type === ''">
+                <i nz-icon nzType="save" nzTheme="outline"></i>Save
+            </button>
+        </nz-col>
+    </nz-row>
 </form>
