--- a/ui/src/app/views/settings/user/edit/user.edit.html
+++ b/ui/src/app/views/settings/user/edit/user.edit.html
@@ -29,12 +29,12 @@
                                     </div>
                                     <div class="field">
                                         <label for="admin">{{'user_label_ring' | translate}}</label>
-                                        <sm-select *ngIf="currentAuthSummary.isAdmin()" class="fluid search"
-                                            name="admin" [disabled]="loading" [(model)]="user.ring">
-                                            <option [value]="'USER'">USER</option>
-                                            <option [value]="'MAINTAINER'">MAINTAINER</option>
-                                            <option [value]="'ADMIN'">ADMIN</option>
-                                        </sm-select>
+                                        <nz-select name="admin" [nzDisabled]="loading" *ngIf="currentAuthSummary.isAdmin()"
+                                                [(ngModel)]="user.ring">
+                                            <nz-option nzValue="USER" nzLabel="USER"></nz-option>
+                                            <nz-option nzValue="MAINTAINER" nzLabel="MAINTAINER"></nz-option>
+                                            <nz-option nzValue="ADMIN" nzLabel="ADMIN"></nz-option>
+                                        </nz-select>
                                         <input *ngIf="!currentAuthSummary.isAdmin()" class="ui input" type="text"
                                             name="admin" [ngModel]="user.ring" [readonly]="true">
                                     </div>
