fix(ui): use step name instead of action name

--- a/ui/src/app/shared/action/step/step.html
+++ b/ui/src/app/shared/action/step/step.html
@@ -11,10 +11,10 @@
         <!-- Step name -->
         <nz-col [nzSpan]="5">
                 <ng-container *ngIf="edit">
-                    <input nz-input name="stepName" [(ngModel)]="step.name"  (keydown)="action.hasChanged = true">
+                    <input nz-input name="stepName" [(ngModel)]="step.step_name"  (keydown)="action.hasChanged = true">
                 </ng-container>
                 <ng-container *ngIf="!edit">
-                    {{step.name}}
+                    {{step.step_name}}
                 </ng-container>
         </nz-col>
         <!-- Link to documentation -->
